--- a/html/ss/css/output/patterns/0-navigation.css
+++ b/html/ss/css/output/patterns/0-navigation.css
@@ -24,6 +24,10 @@
 .bg--light-pastel {
   background-color: #F8826F; }
 
+.icon-lock-white {
+  width: 1em;
+  height: 1.375em; }
+
 .nav__trigger {
   background-repeat: repeat;
   background-color: #222121;
@@ -47,10 +51,13 @@
   z-index: 100; }
 
 .main-nav li {
-  background-color: #451d14;
+  background-color: #8A2C1E;
   margin-bottom: 0; }
   .main-nav li:nth-child(2n) {
-    background-color: #371710; }
+    background-color: #5C261B; }
+  .main-nav li .icon-lock-white {
+    vertical-align: -0.3em;
+    margin-right: 0.4em; }
 
 .main-nav li a {
   display: inline-block;
@@ -60,7 +67,7 @@
   padding: 0.6em 0 0.7em 8%; }
 
 .main-nav li a.active {
-  color: #7ee1ff;
+  color: #ffffff;
   text-decoration: underline; }
 
 .main-nav .parent .sectiontoggle {
@@ -147,9 +154,17 @@
 @media only all and (min-width: 41em) {
   .nav__trigger {
     display: none; }
+  .main-nav li {
+    background-color: #1d1c1c; }
+    .main-nav li .icon-lock-white {
+      display: block;
+      float: left;
+      margin-right: 0.6em; }
+  .main-nav li a.active {
+    color: #F8826F; }
   .js nav.nav-collapse {
     position: static !important;
-    border-bottom: 0.3em solid #8A2C1E; }
+    border-bottom: 0.3em solid #C8412A; }
   .main-nav li {
     z-index: 100;
     width: 33.3333%;
@@ -158,6 +173,11 @@
     border-bottom: 0.1em solid #7a3224; }
     .main-nav li:nth-child(2n) {
       background-color: inherit; }
+    .main-nav li:nth-child(4), .main-nav li:nth-child(5) {
+      width: 50%;
+      background-color: #222121; }
+    .main-nav li:nth-child(4) {
+      border-right: 0.1em solid #8A2C1E; }
   .main-nav .parent-item {
     max-width: 80%; }
   .js nav.nav-collapse .sub-menu.open {
@@ -169,6 +189,8 @@
     margin-top: 4.7em; }
     .js nav.nav-collapse .sub-menu.open li a {
       padding: 0.7em 1.5em 0.7em 1em; }
+  .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
+    min-width: 50%; }
   .main-nav .sub-menu {
     z-index: 100; }
   .main-nav .sub-menu li {
@@ -187,34 +209,53 @@
     max-width: 80em;
     margin: 0 auto 0 auto; }
   .main-nav li {
+    text-align: center;
     font-size: 0.9em;
     font-weight: 400;
-    width: 20%;
     margin-right: 2.5%;
     padding: 0.4em 0 1.2em 0;
     background-color: inherit;
-    height: 6em;
+    height: auto;
     float: left;
     border-bottom: none; }
+    .main-nav li:nth-child(4), .main-nav li:nth-child(5) {
+      width: auto;
+      background-color: inherit;
+      border: 0; }
     .main-nav li:nth-child(2n) {
       background-color: inherit; }
     .main-nav li:last-child {
       margin-right: 0; }
     .main-nav li a {
-      height: 6em; }
-  .main-nav li.home, .main-nav li.contact-us {
-    width: auto;
-    max-width: 5%;
-    margin-right: 5%; }
-  .main-nav li.browse-films {
-    width: 12%; }
-  .main-nav li.resources {
-    max-width: 18%; }
-  .main-nav .parent-item {
-    max-width: 70%; }
+      height: auto; }
+    .main-nav li:nth-child(1) {
+      width: 10%; }
+    .main-nav li:nth-child(2) {
+      width: 22%; }
+    .main-nav li:nth-child(3) {
+      width: 27%; }
+    .main-nav li:nth-child(4) {
+      width: 13%; }
+    .main-nav li:nth-child(5) {
+      width: 18%;
+      margin-right: 0; }
+  .main-nav li .icon-lock-white {
+    float: none;
+    background-size: 1em 1.375em;
+    margin: 0 auto 0.5em auto; }
+  .main-nav li a, .main-nav .parent-item {
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
+    padding-left: 0; }
+  .main-nav li.home a, .main-nav li.about a {
+    margin-top: 1.875em; }
   .js .main-nav .parent .sectiontoggle {
-    float: left;
-    padding-left: 5%; }
+    float: none;
+    padding: 0;
+    display: block;
+    width: 100%;
+    margin: 0; }
   .main-nav .sub-menu {
     visibility: hidden;
     position: absolute;
@@ -229,60 +270,82 @@
     visibility: visible;
     height: auto;
     position: absolute;
-    margin-top: 5.9em;
+    margin-top: 1.1em;
     left: auto;
     width: auto;
+    max-width: 25%;
     margin-left: 0.8em; }
     .main-nav li:hover .sub-menu li a {
       padding: 0.6em 1em 0.6em 1em; }
   .js nav.nav-collapse .main-nav ul.sub-menu.open {
-    margin: 4.7em 0 0 0.8em;
+    margin: 1.1em 0 0 0.8em;
     min-width: initial; }
     .js nav.nav-collapse .main-nav ul.sub-menu.open li a {
       padding: 0.6em 1em 0.6em 1em; }
   .main-nav .sub-menu li {
     height: auto;
+    width: 100%;
+    float: left;
     padding: 0 1em 0 0;
-    font-size: 1em; } }
-
-@media only all and (min-width: 58.75em) {
-  .main-nav li.contact-us {
-    max-width: 7%; }
-  .main-nav li.resources {
-    max-width: 16%; } }
-
-@media only all and (min-width: 63.9375em) {
-  .main-nav li.home {
-    width: 8%;
-    max-width: 8%;
-    margin-right: 2%; }
-  .main-nav li.resources {
-    max-width: 14%; }
-  .main-nav li.browse-films {
-    width: 14%; }
-  .main-nav li.contact-us {
-    width: 10%;
-    max-width: 10%;
-    margin-right: 2%; } }
-
-@media only all and (min-width: 68.125em) {
-  nav, .nav-collapse .main-nav {
-    height: 4.9em; }
-  .main-nav li {
-    height: 4.5em; }
-  .nav-collapse .main-nav li a {
-    height: 4em; }
-  .main-nav li:hover .sub-menu, .main-nav .sub-menu {
-    margin-top: 4.7em; }
+    font-size: 1em; }
+    .main-nav .sub-menu li:nth-child(1), .main-nav .sub-menu li:nth-child(2), .main-nav .sub-menu li:nth-child(3), .main-nav .sub-menu li:nth-child(4), .main-nav .sub-menu li:nth-child(5) {
+      width: 100%; }
   .main-nav .sub-menu li a {
-    height: auto; } }
+    float: left;
+    display: inline-block;
+    width: auto;
+    text-align: left;
+    margin: 0; }
+  .main-nav .sub-menu li .icon-lock-white {
+    float: left;
+    display: inline-block;
+    margin: 0 0.6em 0 0; } }
 
-@media only all and (min-width: 82.25em) {
-  .main-nav li.about a.parent-item {
-    max-width: 60%; } }
+@media only all and (min-width: 64em) {
+  .main-nav li {
+    text-align: left;
+    font-size: 0.9em;
+    font-weight: 400;
+    margin-right: 2.5%;
+    padding: 0.4em 0 1.2em 0;
+    background-color: inherit;
+    height: auto;
+    float: left;
+    border-bottom: none; }
+    .main-nav li:nth-child(2n) {
+      background-color: inherit; }
+    .main-nav li:last-child {
+      margin-right: 0; }
+    .main-nav li a {
+      height: auto; }
+    .main-nav li:nth-child(1) {
+      width: 10%; }
+    .main-nav li:nth-child(2) {
+      width: 22%; }
+    .main-nav li:nth-child(3) {
+      width: 27%; }
+    .main-nav li:nth-child(4) {
+      width: 13%; }
+    .main-nav li:nth-child(5) {
+      width: 18%;
+      margin-right: 0; }
+  .main-nav li .icon-lock-white {
+    float: none;
+    background-size: 1em 1.375em;
+    margin: 0 auto 0.5em auto; }
+  .main-nav li a, .main-nav .parent-item {
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
+    padding-left: 0; }
+  .main-nav li.home a, .main-nav li.about a {
+    margin-top: 1.875em; }
+  .js .main-nav .parent .sectiontoggle {
+    float: none;
+    padding: 0;
+    display: block;
+    width: 100%;
+    margin: 0; } }
 
-@media only all and (min-width: 96.25em) {
-  .main-nav li.about a.parent-item {
-    max-width: 55%; } }
 
 /*# sourceMappingURL=0-navigation.css.map */
