--- a/html/ss/css/output/patterns/0-navigation.css
+++ b/html/ss/css/output/patterns/0-navigation.css
@@ -273,10 +273,13 @@
     margin-top: 1.1em;
     left: auto;
     width: auto;
-    max-width: 25%;
+    max-width: 30%;
     margin-left: 0.8em; }
     .main-nav li:hover .sub-menu li a {
       padding: 0.6em 1em 0.6em 1em; }
+  .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
+    min-width: 30%;
+    max-width: 30%; }
   .js nav.nav-collapse .main-nav ul.sub-menu.open {
     margin: 1.1em 0 0 0.8em;
     min-width: initial; }
@@ -286,6 +289,7 @@
     height: auto;
     width: 100%;
     float: left;
+    background-color: #6b2c1f;
     padding: 0 1em 0 0;
     font-size: 1em; }
     .main-nav .sub-menu li:nth-child(1), .main-nav .sub-menu li:nth-child(2), .main-nav .sub-menu li:nth-child(3), .main-nav .sub-menu li:nth-child(4), .main-nav .sub-menu li:nth-child(5) {
@@ -340,12 +344,63 @@
     padding-left: 0; }
   .main-nav li.home a, .main-nav li.about a {
     margin-top: 1.875em; }
+  .js nav.nav-collapse .main-nav li .sub-menu, .js nav.nav-collapse .main-nav li .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(4) .sub-menu.open, .js nav.nav-collapse .main-nav li:nth-child(5) .sub-menu.open {
+    min-width: auto;
+    width: 23%; }
+  .main-nav li.home .sub-menu a, .main-nav li.about .sub-menu a {
+    margin-top: 0; }
   .js .main-nav .parent .sectiontoggle {
     float: none;
     padding: 0;
     display: block;
     width: 100%;
     margin: 0; } }
+
+@media only all and (min-width: 71.25em) {
+  .main-nav li {
+    padding-bottom: 0.55em; }
+    .main-nav li a {
+      text-align: left;
+      height: auto;
+      float: left; }
+    .main-nav li:nth-child(1) {
+      width: 8%;
+      margin-right: 7%; }
+    .main-nav li:nth-child(2) {
+      width: 17%;
+      margin-right: 5%; }
+      .main-nav li:nth-child(2) a {
+        width: 85%; }
+    .main-nav li:nth-child(3) {
+      width: 19%;
+      margin-right: 7%; }
+    .main-nav li:nth-child(4) {
+      width: 15%;
+      margin-right: 8%; }
+    .main-nav li:nth-child(5) {
+      width: 8%;
+      margin-right: 0; }
+      .main-nav li:nth-child(5) a {
+        width: 85%; }
+  .main-nav .parent-item {
+    width: 80%;
+    text-align: left; }
+  .nav-collapse .main-nav {
+    height: 5em; }
+  .main-nav li .icon-lock-white {
+    float: left;
+    background-size: 1em 1.375em;
+    margin: 0 0.7em 0.5em 0; }
+  .main-nav li.home a, .main-nav li.about a {
+    margin-top: 0; }
+  .js nav.nav-collapse .main-nav ul.sub-menu, .js nav.nav-collapse .main-nav ul.sub-menu.open {
+    margin: 5.1em 0 0 0; }
+  .js .main-nav .parent .sectiontoggle {
+    float: left;
+    padding: 0;
+    display: inline-block;
+    width: 10%;
+    margin: 0.5em 0 0 0; } }
 
 
 /*# sourceMappingURL=0-navigation.css.map */
