--- a/html/ss/css/output/global.css
+++ b/html/ss/css/output/global.css
@@ -2033,7 +2033,7 @@ footer i {
 
 @media only all and (min-width: 71.25em) {
   .main-nav li {
-    padding-bottom: 0.55em; }
+    padding-bottom: 0; }
     .main-nav li a {
       text-align: left;
       height: auto;
@@ -2041,9 +2041,11 @@ footer i {
     .main-nav li:nth-child(1) {
       width: 8%;
       margin-right: 7%; }
+    .main-nav li:nth-child(1) a, .main-nav li:nth-child(4) a {
+      padding-bottom: 2em; }
     .main-nav li:nth-child(2) {
       width: 17%;
-      margin-right: 5%; }
+      margin-right: 6%; }
       .main-nav li:nth-child(2) a {
         width: 85%; }
     .main-nav li:nth-child(3) {
@@ -2051,7 +2053,7 @@ footer i {
       margin-right: 7%; }
     .main-nav li:nth-child(4) {
       width: 15%;
-      margin-right: 8%; }
+      margin-right: 7%; }
     .main-nav li:nth-child(5) {
       width: 8%;
       margin-right: 0; }
@@ -2061,7 +2063,7 @@ footer i {
     width: 80%;
     text-align: left; }
   .nav-collapse .main-nav {
-    height: 5em; }
+    height: 4.5em; }
   .main-nav li .icon-lock-white {
     float: left;
     background-size: 1em 1.375em;
@@ -2069,13 +2071,42 @@ footer i {
   .main-nav li.home a, .main-nav li.about a {
     margin-top: 0; }
   .js nav.nav-collapse .main-nav ul.sub-menu, .js nav.nav-collapse .main-nav ul.sub-menu.open {
-    margin: 5.1em 0 0 0; }
+    margin: 4.6em 0 0 0; }
   .js .main-nav .parent .sectiontoggle {
     float: left;
     padding: 0;
     display: inline-block;
     width: 10%;
     margin: 0.5em 0 0 0; } }
+
+@media only all and (min-width: 74em) {
+  .main-nav li:nth-child(1) {
+    width: 8%;
+    margin-right: 8%; }
+  .main-nav li:nth-child(2) {
+    width: 17%;
+    margin-right: 7%; }
+    .main-nav li:nth-child(2) a {
+      width: 85%; }
+  .main-nav li:nth-child(3) {
+    width: 19%;
+    margin-right: 6%; }
+    .main-nav li:nth-child(3) .parent-item {
+      width: 70%;
+      max-width: 8.5em; }
+  .main-nav li:nth-child(4) {
+    width: 15%;
+    margin-right: 7%; }
+    .main-nav li:nth-child(4) .parent-item {
+      width: 70%;
+      max-width: 7em; }
+  .main-nav li:nth-child(5) {
+    width: 14%;
+    margin-right: 0; }
+    .main-nav li:nth-child(5) a {
+      width: 85%;
+      max-width: 7.8em;
+      padding-bottom: 2em; } }
 
 .pattern {
   background: url(../../assets/pattern.png);
