Footer pattern and breakpointing

--- a/html/ss/assets-icons/output/icons.fallback.css
+++ b/html/ss/assets-icons/output/icons.fallback.css
@@ -16,6 +16,8 @@
 
 .icon-footer-partner-sfe { background-image: url('png/footer-partner-sfe.png'); background-repeat: no-repeat; }
 
+.icon-footer-twitter { background-image: url('png/footer-twitter.png'); background-repeat: no-repeat; }
+
 .icon-header-left { background-image: url('png/header-left.png'); background-repeat: no-repeat; }
 
 .icon-header-right { background-image: url('png/header-right.png'); background-repeat: no-repeat; }
