--- a/html/ss/css/sass/patterns/02-buttons.scss
+++ b/html/ss/css/sass/patterns/02-buttons.scss
@@ -23,6 +23,16 @@
   }
 }
 
+.btn--darkest {
+  background-color: $darkest;
+  border-bottom: 0.2em solid scale-color($darkest, $lightness: -30%);
+  &:hover {
+    box-shadow: inset 0 0 0 0.2em scale-color($darkest, $lightness: 30%);
+    background-color: scale-color($darkest, $lightness: 10%);
+    border-bottom: 0.2em solid scale-color($darkest, $lightness: -10%);
+  }
+}
+
 .btn--mid {
   background-color: $mid;
   border-bottom: 0.2em solid scale-color($mid, $lightness: -30%);
