--- a/html/ss/css/output/patterns/0-header.css
+++ b/html/ss/css/output/patterns/0-header.css
@@ -182,7 +182,7 @@
 @media only all and (min-width: 88.75em) {
   .header__part--brand {
     text-align: right; }
-  .header__part--brand .icon-sos-logo {
+  .header__part--brand .icon-ss-logo {
     margin: 2em 22.5em 0 0; }
   .header__part--search {
     text-align: left;
