--- a/html/ss/css/output/patterns/0-navigation.css
+++ b/html/ss/css/output/patterns/0-navigation.css
@@ -367,7 +367,7 @@
       width: 8%;
       margin-right: 7%; }
     .main-nav li:nth-child(1) a, .main-nav li:nth-child(4) a {
-      padding-bottom: 2em; }
+      padding-bottom: 1.4em; }
     .main-nav li:nth-child(2) {
       width: 17%;
       margin-right: 6%; }
@@ -409,7 +409,7 @@
     width: 8%;
     margin-right: 8%; }
   .main-nav li:nth-child(2) {
-    width: 17%;
+    width: 15%;
     margin-right: 7%; }
     .main-nav li:nth-child(2) a {
       width: 85%; }
@@ -431,6 +431,8 @@
     .main-nav li:nth-child(5) a {
       width: 85%;
       max-width: 7.8em;
-      padding-bottom: 2em; } }
+      padding-bottom: 2em; }
+    .main-nav li:nth-child(5) .sub-menu a {
+      max-width: 100%; } }
 
 /*# sourceMappingURL=0-navigation.css.map */
