--- a/html/ss/css/sass/patterns/0-header.scss
+++ b/html/ss/css/sass/patterns/0-header.scss
@@ -239,7 +239,7 @@
   .header__part--brand {
     text-align: right;
   }
-  .header__part--brand .icon-sos-logo {
+  .header__part--brand .icon-ss-logo {
     margin: 2em 22.5em 0 0;
   }
   .header__part--search {
