--- a/html/ss/css/output/global.css
+++ b/html/ss/css/output/global.css
@@ -2266,7 +2266,7 @@ body {
 
 .btn--light {
   background-color: #C8412A;
-  color: #222121;
+  color: #ffffff;
   border-bottom: 0.2em solid #8c2d1d; }
   .btn--light:hover {
     box-shadow: inset 0 0 0 0.2em #e3897a;
