--- a/html/ss/css/sass/patterns/02-buttons.scss
+++ b/html/ss/css/sass/patterns/02-buttons.scss
@@ -44,7 +44,7 @@
 }
 .btn--light {
   background-color: $light;
-  color: $dark-text;
+  color: $white;
   border-bottom: 0.2em solid scale-color($light, $lightness: -30%);
   &:hover {
     box-shadow: inset 0 0 0 0.2em scale-color($light, $lightness: 40%);
