--- a/html/ss/assets-icons/output/icons.fallback.css
+++ b/html/ss/assets-icons/output/icons.fallback.css
@@ -4,6 +4,8 @@
 
 .icon-body-background { background-image: url('png/body-background.png'); background-repeat: no-repeat; }
 
+.icon-circle-arrow-white { background-image: url('png/circle-arrow-white.png'); background-repeat: no-repeat; }
+
 .icon-circle-arrow { background-image: url('png/circle-arrow.png'); background-repeat: no-repeat; }
 
 .icon-close { background-image: url('png/close.png'); background-repeat: no-repeat; }
