--- a/html/ss/css/output/global.css
+++ b/html/ss/css/output/global.css
@@ -2387,19 +2387,24 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
   font-weight: 400;
   color: #ffffff; }
 
-.cta .icon-circle-arrow {
+.cta .icon-circle-arrow, .cta .icon-circle-arrow-white {
   width: 2.125em;
   height: 2.125em; }
 
 .cta--light {
-  background-color: #F8826F; }
+  background-color: #008FBB;
+  border-color: #00A3DA; }
   .cta--light span {
-    color: #5C261B; }
+    color: #ffffff; }
   .cta--light:hover {
-    background-color: #f98e7d; }
+    background-color: #00a0d2; }
+
+.cta--light-alt {
+  background-color: #5AA641;
+  border-color: #83BF52; }
 
 .cta.icon-pattern {
-  border-color: #371710; }
+  border-color: #C8412A; }
 
 .cta--no-circle div {
   display: none; }
@@ -2415,8 +2420,12 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
 
 @media only all and (min-width: 20em) {
   .cta {
-    border-left: 1.5em solid #222121;
+    border-left: 1.5em solid #5C261B;
     padding: 0.5em 0.8em 0.5em 0.8em; }
+  .cta--light {
+    border-color: #00A3DA; }
+  .cta--light-alt {
+    border-color: #83BF52; }
   .cta span {
     width: 80%;
     float: left;
