--- a/html/ss/css/sass/patterns/02-calls-to-action.scss
+++ b/html/ss/css/sass/patterns/02-calls-to-action.scss
@@ -36,7 +36,8 @@
   color: $white;
 }
 
-.cta .icon-circle-arrow {
+.cta .icon-circle-arrow,
+.cta .icon-circle-arrow-white {
   width: 2.125em;
   height: 2.125em;
 }
@@ -44,17 +45,23 @@
 // Alternatives
 
 .cta--light {
-  background-color: $light-pastel;
+  background-color: $contrast;
+  border-color: $contrast-light;
   span {
-    color: $dark;
+    color: $white;
   }
   &:hover {
-    background-color: scale-color($light-pastel, $lightness: 10%);
+    background-color: scale-color($contrast, $lightness: 7%);
   }
 }
 
+.cta--light-alt {
+	background-color: $contrast-alt;
+  border-color: $contrast-alt-light;
+}
+
 .cta.icon-pattern {
-  border-color: scale-color($dark, $lightness: -40%);
+  border-color: $light;
 }
 
 .cta--no-circle {
@@ -76,8 +83,16 @@
 @media only all and (min-width: 20em) {
   
   .cta {
-    border-left: 1.5em solid $dark-text;
+    border-left: 1.5em solid $dark;
     padding: 0.5em 0.8em 0.5em 0.8em;
+  }
+  
+  .cta--light {
+	  border-color: $contrast-light;
+  }
+  
+  .cta--light-alt {
+	  border-color: $contrast-alt-light;
   }
   
   .cta span {
