--- a/html/ss/assets-icons/output/icons.fallback.css
+++ b/html/ss/assets-icons/output/icons.fallback.css
@@ -24,6 +24,8 @@
 
 .icon-header-right { background-image: url('png/header-right.png'); background-repeat: no-repeat; }
 
+.icon-lock-red { background-image: url('png/lock-red.png'); background-repeat: no-repeat; }
+
 .icon-lock-white { background-image: url('png/lock-white.png'); background-repeat: no-repeat; }
 
 .icon-menu { background-image: url('png/menu.png'); background-repeat: no-repeat; }
