--- a/html/ss/css/output/global.css
+++ b/html/ss/css/output/global.css
@@ -2402,6 +2402,8 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
 .cta--light-alt {
   background-color: #5AA641;
   border-color: #83BF52; }
+  .cta--light-alt:hover {
+    background-color: #62b446; }
 
 .cta.icon-pattern {
   border-color: #C8412A; }
@@ -2417,6 +2419,30 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
 
 .cta--block.icon-pattern p {
   color: #ffffff; }
+
+.cta--lockable {
+  width: auto;
+  min-width: 15em;
+  border-left: none;
+  background-color: #222121;
+  color: #ffffff; }
+  .cta--lockable div {
+    float: none;
+    display: inline-block; }
+  .cta--lockable span {
+    color: #ffffff;
+    width: 55%;
+    height: 2em;
+    display: inline-block;
+    margin-left: 0.8em; }
+  .cta--lockable .cta--lockable__lock {
+    width: 1.375em;
+    margin-left: 0.2em; }
+  .cta--lockable .icon-lock-red {
+    width: 1.375em;
+    height: 1.875em; }
+  .cta--lockable:hover {
+    background-color: #363535; }
 
 @media only all and (min-width: 20em) {
   .cta {
@@ -2435,6 +2461,18 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
     float: right;
     text-align: right;
     padding-top: 0.3em; }
+  .cta.cta--lockable {
+    border-left: none;
+    min-width: 15.5em; }
+    .cta.cta--lockable span {
+      width: 55%;
+      float: none;
+      vertical-align: 0.5em;
+      height: 1.4em; }
+    .cta.cta--lockable div {
+      float: none; }
+    .cta.cta--lockable .cta--lockable__lock {
+      vertical-align: 0.1em; }
   .cta--no-circle span {
     width: 100%;
     padding-bottom: 0.8em; }
@@ -2455,6 +2493,8 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
   .cta span {
     font-size: 1.3em;
     padding: 0.4em 0 0 0; }
+  .cta.cta--lockable span {
+    padding: 0; }
   .cta--block {
     padding: 1.7em; } }
 
