--- a/html/ss/css/sass/patterns/02-calls-to-action.scss
+++ b/html/ss/css/sass/patterns/02-calls-to-action.scss
@@ -58,6 +58,9 @@
 .cta--light-alt {
 	background-color: $contrast-alt;
   border-color: $contrast-alt-light;
+  &:hover {
+    background-color: scale-color($contrast-alt, $lightness: 7%);
+  }
 }
 
 .cta.icon-pattern {
@@ -78,6 +81,37 @@
 
 .cta--block.icon-pattern {
   p {color: $white};
+}
+
+.cta--lockable {
+	width: auto;
+	min-width: 15em;
+	border-left: none;
+	background-color: $darkest;
+	color: $white;
+	div {
+		float: none;
+		display: inline-block;
+	}
+	span {
+		color: $white;
+		width: 55%;
+		height: 2em;
+		//float: left;
+		display: inline-block;
+		margin-left: 0.8em;
+	}
+	.cta--lockable__lock {
+		width: 1.375em;
+		margin-left: 0.2em;
+	}
+	.icon-lock-red {
+		width: 1.375em;
+		height: 1.875em;
+	}
+	&:hover {
+		background-color: scale-color($darkest, $lightness: 9%);
+	} 
 }
 
 @media only all and (min-width: 20em) {
@@ -107,6 +141,23 @@
     text-align: right;
     padding-top: 0.3em;
   }
+  
+  .cta.cta--lockable {
+		border-left: none;
+		min-width: 15.5em;
+		span {
+			width: 55%;
+			float: none;
+			vertical-align: 0.5em;
+			height: 1.4em;
+		}
+		div {
+			float: none;
+		}
+		.cta--lockable__lock {
+			vertical-align: 0.1em;	
+		}
+	}
   
   // Alternatives
   
@@ -148,6 +199,12 @@
     font-size: 1.3em;
     padding: 0.4em 0 0 0;
   }
+  
+  .cta.cta--lockable {
+		span {
+			padding: 0;
+		}
+	}
   
   // alternatives
   
