Pattern: List of Items

--- a/html/ss/css/output/patterns/06-list-of-items.css
+++ b/html/ss/css/output/patterns/06-list-of-items.css
@@ -29,7 +29,7 @@
 
 .items--block {
   padding: 1.5em 1.5em 1em 1.5em;
-  background-color: #F8826F; }
+  background-color: #e5f3e1; }
 
 .items .heading__smallest {
   margin: 0 0 0.6em 0; }
