--- a/html/ss/css/output/global.css
+++ b/html/ss/css/output/global.css
@@ -2799,7 +2799,7 @@ ol ul li:before {
 
 .items--block {
   padding: 1.5em 1.5em 1em 1.5em;
-  background-color: #F8826F; }
+  background-color: #e5f3e1; }
 
 .items .heading__smallest {
   margin: 0 0 0.6em 0; }
