--- a/html/ss/css/output/global.css
+++ b/html/ss/css/output/global.css
@@ -3014,7 +3014,7 @@ ol.pagination li {
   display: inline-block;
   width: 100%;
   padding: 0 0 0 0.2em;
-  margin: 0 0 0 0;
+  margin: 0 0 1em 0;
   background-color: #faa89a; }
 
 .js-tabs .tabs [role=tab] {
@@ -3074,7 +3074,7 @@ ol.pagination li {
     border-right: none; }
   .js-tabs .tabs [role=tab] {
     display: inline-block;
-    width: 28.333%;
+    width: 25%;
     cursor: pointer;
     color: #222121;
     font-weight: 400;
