--- a/html/ss/css/sass/patterns/06-tab-ui.scss
+++ b/html/ss/css/sass/patterns/06-tab-ui.scss
@@ -13,7 +13,7 @@
   display: inline-block;
   width: 100%;
 	padding: 0 0 0 0.2em;
-	margin: 0 0 0 0;
+	margin: 0 0 1em 0;
 	background-color: scale-color($light-pastel, $lightness: 30%);
 }
 
@@ -97,7 +97,7 @@
   
   .js-tabs .tabs [role=tab] {
     display: inline-block;
-    width: 28.333%;
+    width: 25%;
   	cursor: pointer;
   	color: $dark-text;
   	font-weight: 400;
